# osml-data-intake

./: .pre-commit-config.yaml  NOTICE  README.md  pyproject.toml  setup.cfg  tox.ini
.github/actions/generate-deployment-json/: action.yml
.github/workflows/: deploy.yml  destroy.yml  docker.yml  pypi.yml  release.yml  run-integration-tests.yml  tox.yml
cdk/: .gitignore  Dockerfile.tmp  README.md  cdk.json  jest.config.js  package-lock.json  package.json
cdk/lib/: data-catalog-stack.ts  data-intake-stack.ts  integration-test-stack.ts  network-stack.ts
cdk/lib/constructs/: types.ts
cdk/lib/constructs/data-catalog/: container.ts  dataplane.ts  dc-dataplane.ts  dc-opensearch-domain.ts  ingest-function.ts  ingest-role.ts  intake-function.ts  intake-role.ts  metadata-storage.ts  network.ts  opensearch.ts  stac-api-gateway.ts  stac-function.ts  stac-role.ts
cdk/lib/constructs/data-intake/: dataplane.ts  di-dataplane.ts  lambda-function.ts  lambda-role.ts  metadata-storage.ts
cdk/test/: data-catalog-stack.test.ts  data-intake-stack.test.ts  load-deployment.test.ts  network-stack.test.ts  test-utils.ts
conda/: environment-py313.yml  environment.yml
doc/: conf.py  index.rst
docker/: Dockerfile.bulk  Dockerfile.ingest  Dockerfile.intake  Dockerfile.integration-test  Dockerfile.stac  requirements-ingest.txt  requirements-stac.txt
scripts/: update_stac_schemas.py
test/data/: feature_collection.geojson
test/integ/: __init__.py  geojson_test.py  handler.py  image_test.py  integ_utils.py  requirements.txt  test_integration.py
(+90 files in other folders)
