[metadata]
name = osml-data-intake
version = 1.2.0
description = Package to run the osml image intake component service.
long_description = file: README.md
long_description_content_type = text/markdown
author = Amazon Web Services
author_email = aws-osml-admin@amazon.com
license = Apache-2.0
project_urls =
    Source = https://github.com/aws-solutions-library-samples/osml-data-intake
    Tracker = https://github.com/aws-solutions-library-samples/osml-data-intake/issues
classifiers =
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir=
    =src
packages=find_namespace:
python_requires = >=3.9
include_package_data = True

install_requires =
    jsonschema>=4.0.1,<4.18
    pystac[validation]==1.8.3

[options.packages.find]
where = src
exclude =
    test

[options.package_data]
package_data =
aws.osml.data_intake = schemas/**/*.json
* = py.typed

[options.extras_require]
gdal =
    gdal>=3.8.3
test =
    tox
